# reuse-bitcoin-pow-gadgets

./: Cargo.toml  README.md
src/: lib.rs
src/spv/: bitcoin_script.rs  block_845531  block_845797  mod.rs
src/structures/: compact_target.rs  hash.rs  header.rs  merkle_hash.rs  mod.rs  nonce.rs  time.rs  version.rs
src/utils/: mod.rs
