[package]
name = "reuse-bitcoin-pow-gadgets"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.0"
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script" }
covenants-gadgets = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/covenants-gadgets" }
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
anyhow = "1.0.86"

[dev-dependencies]
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec" }
hex = "0.4.3"

[profile.dev]
opt-level = 3

[profile.release]
lto = true